kustomize/base/apps/rook-ceph/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
  labels:
    name: rook-ceph
    pod-security.kubernetes.io/enforce: privileged
