kustomize/base/apps/rook-ceph/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rook-ceph-deny-external-ingress
  namespace: rook-ceph
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: rook-ceph
    - from:
        - namespaceSelector:
            matchLabels:
              name: kube-prometheus-system
      ports:
        - port: 9283
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rook-ceph-allow-dashboard
  namespace: rook-ceph
spec:
  podSelector:
    matchLabels:
      app: rook-ceph-mgr
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 7000
          protocol: TCP
        - port: 7001
          protocol: TCP
        - port: 8443
          protocol: TCP
